# collect-fee-pools

./: .gitignore  README.md  build_final.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
core/: __init__.py  monitor.py
gui/: __init__.py  about_dialog.py  dialogs.py  main_window.py
icon/: favicon.icns
models/: __init__.py  coleta.py  pool_config.py
utils/: __init__.py  icons.py  paths.py  styles.py
